<resources>
    <string name="app_name">Notebook</string>
    <string name="label_search">Search</string>

    <!-- Item note -->
    <string name="label_title">Title</string>
    <string name="label_text">Text</string>

    <!-- Adding fragment -->
    <string name="header_adding">Add note</string>
    <string name="text_save">Save</string>

    <!-- Details fragment -->
    <string name="header_details">Details</string>
    <string name="text_delete">Delete</string>
    <string name="back_arrow">Back arrow</string>

    <!-- Toast and snack labels -->
    <string name="warning_adding_message">Please, fill all files!</string>
    <string name="message_delete">Successful deleted!</string>
    <string name="message_update">Successful updated!</string>
</resources>